fix: add vertical parallax buffer to prevent bottom-edge clipping

--- a/src/components/effects/NoirSkyline.module.css
+++ b/src/components/effects/NoirSkyline.module.css
@@ -27,9 +27,9 @@
   position: absolute;
   left: -30px;
   right: -30px;
-  bottom: 0;
+  top: -15px;
+  bottom: -15px;
   width: calc(100% + 60px);
-  height: 100%;
   transform-origin: 50% 100%; /* Scale up from bottom center */
   will-change: transform;
   contain: layout style;
